2005-05-15  Murray Cumming <murrayc@murrayc.com>

	* glom/base_db.cc:
	* glom/base_db.h:
	report_build_summary(): Implemented, so summary parts show up in 
	reports.
	* glom/data_structure/layout/layoutitem_field.cc:
	* glom/data_structure/layout/layoutitem_field.h:
	Added get_title_or_name(), delegating to the member Field.
	* glom/data_structure/layout/report_parts/layoutitem_fieldsummary.cc:
	* glom/data_structure/layout/report_parts/layoutitem_fieldsummary.h:
	Override get_title_or_name() to mention the summary type. Added 
	get_layout_display_name_field() to get just the field part. Corrected 
	the copy constructor and operator== to use the summary type too.
	* glom/dialog_layout_report.cc:
	Show the field name and summary type properly.
	* glom/document/document_glom.cc:
	Save the summary type of LayoutItem_FieldSummary parts.
	* glom/layout_item_dialogs/dialog_field_summary.cc:
	* glom/utils.cc: build_sql_select_with_where_clause(): If the LayoutItem_Field 
	is actually a LayoutItem_FieldSummary, use a summary function instead of just 
	getting the field value.
	* xslt/print_report_to_html.xsl: Added a block for the summary part.

2005-05-14  Murray Cumming <murrayc@murrayc.com>

	* glom/base_db.cc:
	* glom/base_db.h:
	* glom/data_structure/field.h:
	* glom/mode_data/box_data.cc:
	* glom/mode_data/box_data.h:
	* glom/mode_data/box_data_details.cc:
	* glom/mode_data/box_data_list.cc:
	* glom/mode_data/dialog_layout.h:
	* glom/mode_data/dialog_layout_details.cc:
	* glom/mode_data/dialog_layout_list.cc:
	* glom/utility_widgets/db_adddel/db_adddel.cc:
	* glom/utility_widgets/db_adddel/glom_db_treemodel.h:
	* glom/utils.cc:
	* glom/utils.h:
	type_vecLayoutItems now stores sharedptr<LayoutItem_Field>s 
	instead of by-value copying. This allows us to use the 
        LayoutItem_Field polymorphically as well as improving 
        performance.

2005-05-14  Murray Cumming <murrayc@murrayc.com>

	* glom/base_db.cc:
	* glom/base_db.h:
	* glom/frame_glom.cc: